improved mediainfo spacing, should resolve #66

--- a/_style.scss
+++ b/_style.scss
@@ -2542,6 +2542,10 @@ td.center {
     word-wrap: break-word;
 }
 
+table.mediainfo {
+    margin: -15px 0px 1em !important;
+}
+
 table.mediainfo table, table.mediainfo table td {
     border: none !important;
     padding: 0;
